fix tasks pages functionality
